@@ -105,6 +105,10 @@ These options are followed by at least one scrobbler section (choose a
 unique section name like "libre.fm" which only appears in the log
 file; the name "mpdscribble" is reserved).
 .TP
+.B file = PATH
+Log to a file instead of submitting the songs to an AudioScrobbler
+server.
+.TP
 .B url = URL
 The handshake URL of the scrobbler.  Example:
 "http://post.audioscrobbler.com/", "http://turtle.libre.fm/"
