@@ -49,3 +49,6 @@ journal = /var/cache/mpdscribble/lastfm.journal
 #username = my_username
 #password = my_password
 #journal = /var/cache/mpdscribble/jamendo.journal
+
+#[file]
+#file = /var/log/mpdscribble/log
